--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
       <h2><span>About</span> Me</h2>
       <div class="about">
         <img src="img/barudua.svg" alt="saya" class="hua" />
-        <p class="text">Reyhan is highly motivated career in data. This has led Reyhan to learn more about data through several training and courses outside of tecture. Reyhan has also honed soft skill related to data to support his career, through internship, research, and organizational experience. Reyhan has data oriented and analytical thinking skills, as well as the use of several data tools, namely SQL, Tableau, Power BI, Google Data Studio, Python and Microsoft Excel. Currently, Reyhan is looking for oppurtunities in the field of data analyst, business intellegence, data science, and market research.</p>
+        <p class="text">Reyhan is highly motivated career in data. 
+          This has led Reyhan to learn more about data through several training and courses outside of tecture. 
+          Reyhan has also honed soft skill related to data to support his career, through internship, research,
+           and organizational experience. Reyhan has data oriented and analytical thinking skills, as well as the 
+           use of several data tools, namely SQL, Tableau, Power BI, Google Data Studio, Python and Microsoft Excel
+           . Currently, Reyhan is looking for oppurtunities in the field of data analyst, business intellegence, 
+           data science, and market research.</p>
       </div>
     
     <!-- DA Section start -->
