--- a/index.html
+++ b/index.html
@@ -129,9 +129,16 @@
           <i class="fa-brands fa-medium"></i>
           <h2>The Importance of Data in Business Decisions</h2>
           <p></p>
-          <a class="jj" href=https://medium.com/@reyhandifa888/6682af17c4f7 target="_blank" rel="noopener noreferrer">Read More</a>
+          <a class="jj" href=https://medium.com/@reyhandifa888/the-importance-of-data-in-business-decisions-6682af17c4f7 target="_blank" rel="noopener noreferrer">Read More</a>
         </div>
         
+        <div>
+          <i class="fa-brands fa-medium"></i>
+          <h2>Unexpected Data Stories: Unraveling Business Potential Through Outlier Detection</h2>
+          <p></p>
+          <a class="jj" href=https://medium.com/@reyhandifa888/unexpected-data-stories-unraveling-business-potential-through-outlier-detection-2e5e541353b5 target="_blank" rel="noopener noreferrer">Read More</a>
+        </div>
+
       </div> 
       </div>
     </div>
