--- a/index.html
+++ b/index.html
@@ -71,29 +71,9 @@
       <div class="product">
         <img src="img/chart1.svg" />
         <div class="product-info">
-          <h4 class="product-title">Sales Performance Analysis</h4>
-          <!-- <p class="product-">129</p> -->
-          <a class="product-btn" href="img/gds1.pdf" target="_blank" rel="noopener noreferrer">View Project</a>
-        </div>
-      </div>
-
-      <div class="product">
-        <img src="img/chart3.svg" class="white-icon"/>
-        <div class="product-info">
           <h4 class="product-title">Business Performance Analysis</h4>
           <!-- <p class="product-">129</p> -->
-          <a class="product-btn" href="img/powerbi.pdf" target="_blank" rel="noopener noreferrer">View Project</a>
-        </div>
-      </div>
-    
-
-
-      <div class="product">
-      <img src="img/chart4.svg" />
-        <div class="product-info">
-          <h4 class="product-title">Sales and Operations Performance Review</h4>
-          <!-- <p class="product-">129</p> -->
-          <a class="product-btn" href="img/TOOLS UP.pdf" target="_blank" rel="noopener noreferrer">View Project</a>
+          <a class="product-btn" href="img/Reyhan_Portofolio.pdf" target="_blank" rel="noopener noreferrer">View Project</a>
         </div>
       </div>
 
