--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           <a href= https://github.com/rehann888 target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
           <a href= https://medium.com/@reyhandifa888 target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-medium"></i></a>
         </div>
-        <a href="img/CV Reyhan Terra Diffa - NEW1.pdf" download class="btn btn3" target="_blank" rel="noopener noreferrer"> Download CV</a>
+        <a href="img/CV Reyhan Terra Diffa_new3.pdf" download class="btn btn3" target="_blank" rel="noopener noreferrer"> Download CV</a>
       </div>
       <div class="contact-right">
       <form>
