--- a/index.html
+++ b/index.html
@@ -78,8 +78,18 @@
                 <div class="image-item">                    
                     <span>Java</span>
                 </div>
-              </div>
+            <div class="image-list"></div>
+                <div class="image-item">                    
+                  <span>SQL</span>
+                </div>
+            <div class="image-list"></div>
+                <div class="image-item">                    
+                  <span>NoSQL</span>
+                </div>
+            </div>
+            </div>
         </div>
+
         <div id="tools" class="skill-content" style="display: none;">
           <div class="image-list">
             <div class="image-item">                
