--- a/index.html
+++ b/index.html
@@ -265,6 +265,12 @@
           <a class="jj" href=https://medium.com/@reyhandifa888/unexpected-data-stories-unraveling-business-potential-through-outlier-detection-2e5e541353b5 target="_blank" rel="noopener noreferrer">Read More</a>
         </div>
 
+        <div>
+          <i class="fa-brands fa-medium"></i>
+          <h2>10 Reasons Why Apache Kafka is the Solution as a Pub/Sub Messaging Platform</h2>
+          <p></p>
+          <a class="jj" href=https://medium.com/@reyhandifa888/10-reasons-why-apache-kafka-is-the-solution-as-a-pub-sub-messaging-platform-6ab3dec0a9f2 target="_blank" rel="noopener noreferrer">Read More</a>
+        </div>
         
 
       </div> 
