--- a/index.html
+++ b/index.html
@@ -272,6 +272,12 @@
           <a class="jj" href=https://medium.com/@reyhandifa888/10-reasons-why-apache-kafka-is-the-solution-as-a-pub-sub-messaging-platform-6ab3dec0a9f2 target="_blank" rel="noopener noreferrer">Read More</a>
         </div>
         
+        <div>
+          <i class="fa-brands fa-medium"></i>
+          <h2>10 Reasons Why Apache Kafka is the Solution as a Pub/Sub Messaging Platform</h2>
+          <p></p>
+          <a class="jj" href= https://medium.com/@reyhandifa888/the-importance-of-tcl-command-in-building-database-transaction-integrity-6222839b5e1c target="_blank" rel="noopener noreferrer">Read More</a>
+        </div>
 
       </div> 
       </div>
@@ -292,7 +298,7 @@
           <a href= https://github.com/rehann888 target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
           <a href= https://medium.com/@reyhandifa888 target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-medium"></i></a>
         </div>
-        <a href="img/CV Reyhan Terra Diffa_FIX4.pdf" download class="btn btn3" target="_blank" rel="noopener noreferrer"> Download CV</a>
+        <a href="img/CV Reyhan Terra Diffa_BI4.pdf" download class="btn btn3" target="_blank" rel="noopener noreferrer"> Download CV</a>
       </div>
       <div class="contact-right">
       <form>
