--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         
         <div>
           <i class="fa-brands fa-medium"></i>
-          <h2>10 Reasons Why Apache Kafka is the Solution as a Pub/Sub Messaging Platform</h2>
+          <h2>The Importance of TCL Command in Building Database Transaction Integrity</h2>
           <p></p>
           <a class="jj" href= https://medium.com/@reyhandifa888/the-importance-of-tcl-command-in-building-database-transaction-integrity-6222839b5e1c target="_blank" rel="noopener noreferrer">Read More</a>
         </div>
