--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
       <h2><span>About</span> Me</h2>
       <div class="about">
         <img src="img/barudua.svg" alt="saya" class="hua" />
-        <p class="text">Reyhan is a highly motivated Software Engineer with extensive training, internships, and
-          organizational experience. He excels in developing scalable and reliable software
-          systems and is proficient in technologies such as Java, Golang, JavaScript, Python, R, SQL,
-          and NoSQL (MongoDB, Redis, etc.). Reyhan has demonstrated his ability to deliver
-          impactful software solutions that enhance business performance through his
-          experiences and projects.</p>
+        <p class="text">Reyhan is highly motivated to pursue a career in data, AI and software engineer. Reyhan also hones soft skills to support his career, through internships, research, and organizational experiences. He excels in developing scalable and reliable software systems and is proficient in technologies such as: 
+          Java, Go, JS, Python, R, SQL, Excel, Spreadsheet, NoSQL, 
+          Azure, AWS, Apache Kafka, Apache Airflow, Apache Flink, Apache Spark, 
+          Kubernetes, Docker,
+          Power BI, Tableau, and Google Looker Studio.
+          Within 6 months Reyhan has also successfully completed more than 10 projects in the fields of Software Engineer, Data Science and Data Engineer..</p>
       </div>
     
       <section id="S" class="skills">
