--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
       <h2><span>About</span> Me</h2>
       <div class="about">
         <img src="img/barudua.svg" alt="saya" class="hua" />
-        <p class="text">Reyhan is highly motivated to pursue a career in data, AI and software engineer. Reyhan also hones soft skills to support his career, through internships, research, and organizational experiences. He excels in developing scalable and reliable software systems and is proficient in technologies such as: 
-          Java, Go, JS, Python, R, SQL, Excel, Spreadsheet, NoSQL, 
-          Azure, AWS, Apache Kafka, Apache Airflow, Apache Flink, Apache Spark, 
-          Kubernetes, Docker,
-          Power BI, Tableau, and Google Looker Studio.
-          Within 6 months Reyhan has also successfully completed more than 10 projects in the fields of Software Engineer, Data Science and Data Engineer..</p>
+        <p class="text">Reyhan is a Physics graduate with 1 year of experience in software and data-related
+          projects, having completed 9 projects in software engineering, back-end system, and the
+          data field, along with 10 months of organizational experience. He is proficient in Java,
+          JavaScript (React.js), Python, Spring Framework, R, SQL, and NoSQL.
+          </p>
       </div>
     
       <section id="S" class="skills">
@@ -181,7 +180,7 @@
       <div class="product">
         <svg class="done" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M30 60c16.569 0 30-13.431 30-30C60 13.431 46.569 0 30 0 13.431 0 0 13.431 0 30c0 16.569 13.431 30 30 30Z" fill="#000000" class="fill-000000"></path><path d="M25.425 47.517c0-.45-.016-1.64-.025-3.22-5.135 1.143-6.218-2.538-6.218-2.538-.84-2.187-2.05-2.77-2.05-2.77-1.677-1.174.126-1.15.126-1.15 1.853.134 2.828 1.951 2.828 1.951 1.647 2.893 4.32 2.058 5.373 1.574.168-1.224.645-2.058 1.172-2.531-4.1-.478-8.41-2.102-8.41-9.356 0-2.066.72-3.756 1.901-5.08-.189-.478-.824-2.402.182-5.009 0 0 1.55-.509 5.076 1.94a17.275 17.275 0 0 1 4.623-.637c1.567.007 3.146.218 4.622.638 3.523-2.45 5.071-1.94 5.071-1.94 1.008 2.604.374 4.529.184 5.009 1.183 1.323 1.897 3.013 1.897 5.08 0 7.271-4.317 8.871-8.43 9.34.664.584 1.254 1.74 1.254 3.506 0 2.53-.024 4.572-.024 5.193 0 .507.333 1.095 1.27.91 7.33-2.508 12.615-9.599 12.615-17.959 0-10.455-8.267-18.93-18.463-18.93-10.194 0-18.46 8.475-18.46 18.93 0 8.363 5.29 15.458 12.626 17.961.923.173 1.26-.411 1.26-.912Z" fill="#ffffff" class="fill-ffffff"></path></g></svg> 
         <div class="product-info">
-          <h4 class="product-title">Spring E-commerce</h4>
+          <h4 class="product-title">Java Spring E-commerce</h4>
           <!-- <p class="product-">129</p> -->
           <a class="product-btn" href="https://github.com/rehann888/springboot-ecommerce" target="_blank" rel="noopener noreferrer">View Project</a>
         </div>
@@ -190,7 +189,16 @@
       <div class="product">
         <svg class="done" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M30 60c16.569 0 30-13.431 30-30C60 13.431 46.569 0 30 0 13.431 0 0 13.431 0 30c0 16.569 13.431 30 30 30Z" fill="#000000" class="fill-000000"></path><path d="M25.425 47.517c0-.45-.016-1.64-.025-3.22-5.135 1.143-6.218-2.538-6.218-2.538-.84-2.187-2.05-2.77-2.05-2.77-1.677-1.174.126-1.15.126-1.15 1.853.134 2.828 1.951 2.828 1.951 1.647 2.893 4.32 2.058 5.373 1.574.168-1.224.645-2.058 1.172-2.531-4.1-.478-8.41-2.102-8.41-9.356 0-2.066.72-3.756 1.901-5.08-.189-.478-.824-2.402.182-5.009 0 0 1.55-.509 5.076 1.94a17.275 17.275 0 0 1 4.623-.637c1.567.007 3.146.218 4.622.638 3.523-2.45 5.071-1.94 5.071-1.94 1.008 2.604.374 4.529.184 5.009 1.183 1.323 1.897 3.013 1.897 5.08 0 7.271-4.317 8.871-8.43 9.34.664.584 1.254 1.74 1.254 3.506 0 2.53-.024 4.572-.024 5.193 0 .507.333 1.095 1.27.91 7.33-2.508 12.615-9.599 12.615-17.959 0-10.455-8.267-18.93-18.463-18.93-10.194 0-18.46 8.475-18.46 18.93 0 8.363 5.29 15.458 12.626 17.961.923.173 1.26-.411 1.26-.912Z" fill="#ffffff" class="fill-ffffff"></path></g></svg> 
         <div class="product-info">
-          <h4 class="product-title">CPU Scheduler Simulation (FIFO, SJF, RoundRobin)</h4>
+          <h4 class="product-title">Java Streaming Data Pipeline System </h4>
+          <!-- <p class="product-">129</p> -->
+          <a class="product-btn" href="https://github.com/rehann888/FlinkEcommerce1" target="_blank" rel="noopener noreferrer">View Project</a>
+        </div>
+      </div>
+
+      <div class="product">
+        <svg class="done" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M30 60c16.569 0 30-13.431 30-30C60 13.431 46.569 0 30 0 13.431 0 0 13.431 0 30c0 16.569 13.431 30 30 30Z" fill="#000000" class="fill-000000"></path><path d="M25.425 47.517c0-.45-.016-1.64-.025-3.22-5.135 1.143-6.218-2.538-6.218-2.538-.84-2.187-2.05-2.77-2.05-2.77-1.677-1.174.126-1.15.126-1.15 1.853.134 2.828 1.951 2.828 1.951 1.647 2.893 4.32 2.058 5.373 1.574.168-1.224.645-2.058 1.172-2.531-4.1-.478-8.41-2.102-8.41-9.356 0-2.066.72-3.756 1.901-5.08-.189-.478-.824-2.402.182-5.009 0 0 1.55-.509 5.076 1.94a17.275 17.275 0 0 1 4.623-.637c1.567.007 3.146.218 4.622.638 3.523-2.45 5.071-1.94 5.071-1.94 1.008 2.604.374 4.529.184 5.009 1.183 1.323 1.897 3.013 1.897 5.08 0 7.271-4.317 8.871-8.43 9.34.664.584 1.254 1.74 1.254 3.506 0 2.53-.024 4.572-.024 5.193 0 .507.333 1.095 1.27.91 7.33-2.508 12.615-9.599 12.615-17.959 0-10.455-8.267-18.93-18.463-18.93-10.194 0-18.46 8.475-18.46 18.93 0 8.363 5.29 15.458 12.626 17.961.923.173 1.26-.411 1.26-.912Z" fill="#ffffff" class="fill-ffffff"></path></g></svg> 
+        <div class="product-info">
+          <h4 class="product-title">Java CPU Scheduler Simulation (FIFO, SJF, RoundRobin)</h4>
           <!-- <p class="product-">129</p> -->
           <a class="product-btn" href="https://github.com/rehann888/cpu-scheduler" target="_blank" rel="noopener noreferrer">View Project</a>
         </div>
@@ -234,16 +242,6 @@
           <a class="product-btn" href="https://youtube.com/shorts/kZOFFVqa5Jo?feature=share" target="_blank" rel="noopener noreferrer">Demo Video</a>
         </div>
       </div>
-
-      <div class="product">
-        <svg class="done" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M30 60c16.569 0 30-13.431 30-30C60 13.431 46.569 0 30 0 13.431 0 0 13.431 0 30c0 16.569 13.431 30 30 30Z" fill="#000000" class="fill-000000"></path><path d="M25.425 47.517c0-.45-.016-1.64-.025-3.22-5.135 1.143-6.218-2.538-6.218-2.538-.84-2.187-2.05-2.77-2.05-2.77-1.677-1.174.126-1.15.126-1.15 1.853.134 2.828 1.951 2.828 1.951 1.647 2.893 4.32 2.058 5.373 1.574.168-1.224.645-2.058 1.172-2.531-4.1-.478-8.41-2.102-8.41-9.356 0-2.066.72-3.756 1.901-5.08-.189-.478-.824-2.402.182-5.009 0 0 1.55-.509 5.076 1.94a17.275 17.275 0 0 1 4.623-.637c1.567.007 3.146.218 4.622.638 3.523-2.45 5.071-1.94 5.071-1.94 1.008 2.604.374 4.529.184 5.009 1.183 1.323 1.897 3.013 1.897 5.08 0 7.271-4.317 8.871-8.43 9.34.664.584 1.254 1.74 1.254 3.506 0 2.53-.024 4.572-.024 5.193 0 .507.333 1.095 1.27.91 7.33-2.508 12.615-9.599 12.615-17.959 0-10.455-8.267-18.93-18.463-18.93-10.194 0-18.46 8.475-18.46 18.93 0 8.363 5.29 15.458 12.626 17.961.923.173 1.26-.411 1.26-.912Z" fill="#ffffff" class="fill-ffffff"></path></g></svg> 
-        <div class="product-info">
-          <h4 class="product-title">Real Time Transactions Data Pipeline System </h4>
-          <!-- <p class="product-">129</p> -->
-          <a class="product-btn" href="https://github.com/rehann888/FlinkEcommerce1" target="_blank" rel="noopener noreferrer">View Project</a>
-        </div>
-      </div>
-
       
       <div class="product">
         <img src="img/chart1.svg" />
