--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       <div class="about">
         <img src="img/barudua.svg" alt="saya" class="hua" />
         <p class="text">Reyhan is a Physics graduate with 1 year of experience in software and data-related
-          projects, having completed 9 projects in software engineering, back-end system, and the
-          data field, along with 10 months of organizational experience. He is proficient in Java,
-          JavaScript (React.js), Python, Spring Framework, R, SQL, and NoSQL.
+          projects, having completed more than 5 projects in software development and backend
+          development (Spring Boot), along with 10 months of organizational experience. He is
+          proficient in Java, Spring Boot, JavaScript, Python, R, SQL, and NoSQL.
           </p>
       </div>
     
